--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,29 @@
 .App {
-    text-align: center;
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+    background-color: #ffb83d;
+    font-family: "Rock Salt", cursive;
+    padding: 3rem;
+    width: 100%;
+}
+
+.App__Title {
+    position: static;
+}
+
+.App__Input {
     display: flex;
     flex-direction: column;
+    padding: 1rem;
     align-items: center;
+    border: 3px solid #502958;
     justify-content: center;
-    background-color: #ffb83d;
-    font-family: 'Rock Salt', cursive;
+}
 
+.App__List {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 input {
@@ -39,9 +56,15 @@ h1 {
     font-size: 2.5rem;
 }
 
+h3 {
+    color: #502958;
+    font-size: 1.5rem;
+    margin: 0;
+}
+
 button {
     border: none;
-    background:  #502958;
+    background: #502958;
     color: #ffffff !important;
     font-weight: 100;
     padding: 20px;
@@ -50,25 +73,49 @@ button {
     display: inline-block;
     transition: all 0.3s ease 0s;
     font-size: 14px;
-    font-family: 'Rock Salt', cursive;
+    font-family: "Rock Salt", cursive;
 }
 
 button:hover {
     color: white !important;
     font-weight: 700 !important;
-    background: #B81F77;
+    background: #b81f77;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     transition: all 0.3s ease 0s;
 }
 
-.foodlist {
+.App__List__Wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
-.foodlist__single {
-    padding: 1rem;
+.App__List__Single {
+    padding: 0.5rem 1rem;
+    border: 3px solid #502958;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    transition: all 0.3s ease-in;
 }
 
+.App__List__Single:nth-child(3n)  {
+    margin-right: 0;
+}
 
+.App__List__Single__Buttons {
+    display: flex;
+    justify-content: between;
+}
+
+.App__List__Single__Buttons button:nth-child(1) {
+    margin-right: 1rem;
+}
+
+.App__List__Single h1 {
+    margin: 0;
+}
