--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,28 @@
 .App {
-    display: grid;
-    grid-template-columns: 2fr 4fr;
+    display: flex;
+    justify-content: center;
     background-color: #ffb83d;
     font-family: "Rock Salt", cursive;
-    padding: 3rem;
-    width: 100%;
+}
+
+.App__Container {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+.App__Header {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.App__Header__Logo {
+    width: 100px;
+    height: 100%;
+    margin-right: 1rem;
 }
 
 .App__Title {
@@ -21,9 +39,9 @@
 }
 
 .App__List {
-    margin-left: 1rem;
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
 }
 
 input {
@@ -86,9 +104,8 @@ button:hover {
 }
 
 .App__List__Wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
 }
 
 .App__List__Single {
@@ -99,13 +116,10 @@ button:hover {
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
-    margin-right: 1rem;
     transition: all 0.3s ease-in;
 }
 
-.App__List__Single:nth-child(3n)  {
-    margin-right: 0;
-}
+
 
 .App__List__Single__Buttons {
     display: flex;
